Starting attempt, this takes awhile...

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <div class="btn-group btn-group-justified">
                         <a href="/index.html" class="btn btn-primary active">Home</a>
                         <a href="/resume.html" class="btn btn-primary">Resume</a>
+                        <a href="/work/index.html" class="btn btn-primary">Experience</a>
                         <a href="/projects/index.html" class="btn btn-primary">Projects</a>
                         <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
