--- a/resume.html
+++ b/resume.html
@@ -35,6 +35,7 @@
                     <div class="btn-group btn-group-justified">
                         <a href="/index.html" class="btn btn-primary">Home</a>
                         <a href="/resume.html" class="btn btn-primary active">Resume</a>
+                        <a href="/work/index.html" class="btn btn-primary">Experience</a>
                         <a href="/projects/index.html" class="btn btn-primary">Projects</a>
                         <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
@@ -78,7 +79,7 @@
             </div>
             <div class="row top-row">
                 <div class="col-sm-3">
-                    <h3><a class="discrete-links" href="/work.html">WORK EXPERIENCE</a></h3>
+                    <h3><a class="discrete-links" href="/work/index.html">WORK EXPERIENCE</a></h3>
                 </div>
                 <div class="col-sm-7">
                     <div class="inner-text">
