--- a/work/index.html
+++ b/work/index.html
@@ -25,49 +25,52 @@
     <body>
         <section class="container">
             <div class="page-header">
-                <h1>Projects</h1>
+                <h1>Work Experience</h1>
             </div>
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
                         <a href="/index.html" class="btn btn-primary">Home</a>
                         <a href="/resume.html" class="btn btn-primary">Resume</a>
-                        <a href="/work/index.html" class="btn btn-primary">Experience</a>
+                        <a href="/work/index.html" class="btn btn-primary active">Experience</a>
                         <a href="/projects/index.html" class="btn btn-primary">Projects</a>
                         <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="centered-head small-head">Hybrid Instruments</h1>
-                    <h3 class="centered-head">Summer Research Project</h3>
+                <div class="col-md-7">
+                    <h1 class="centered-head small-head">DSP Concepts, Inc.</h1>
+                    <h3 class="centered-head">Build Automation, Quality Assurance</h3>
+                </div>
+                <!-- TODO: switch to figures -->
+                <div class="col-md-5">
+                    <!-- TODO: add alt text -->
+                    <!-- TODO: use width=100%, and make images much smaller! -->
+                    <!-- TODO: use same style with project imgs -->
+                    <img src="/images/dspc.png" class="img-responsive">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <p class="project-text">
-                        During the Summer of 2016, I got the unique opportunity to be a part of one of the most interdisciplinary
-                        projects I have ever joined. Combining the skills of art, electrical engineering, and music, this project was
-                        aimed to bring recording technology to the mobile world as portably as possible. Our solution was to create
-                        a 3D printed phone case with a portable verison of a musical instrument (our tests replicated a violin's bow)
-                        and a contact microphone, attach it to a mic pre-amp circuit to bring the signal up to line level for the phone
-                        to receive and record with custom software. While involved with all facets of the project, my main task was to
-                        build the mic pre-amp circuitry, starting from breadboard prototyping to final PCB circuit.<br>
-                        <br>
-                        Most of these files are described in a
-                        <strong><a href="https://github.com/xhamyd/HybridInstruments">Github repo</a></strong> linked below.
-                    </p>
+                <div class="col-md-7">
+                    <h1 class="centered-head small-head">iRobot Corp.</h1>
+                    <h3 class="centered-head">Simulator, Automation, and Support Engineer</h3>
+                </div>
+                <div class="col-md-5">
+                    <img src="/images/irobot.jpg" class="img-responsive">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="writeup-text">
-                        <h3>Design Files</h3>
-                        <a class="btn btn-primary btn-lg" href="https://github.com/xhamyd/HybridInstruments" role="button">
-                            <span class="glyphicon glyphicon-link"></span> View files
-                        </a>
-                    </div>
+                <div class="col-md-7">
+                    <h1 class="centered-head small-head">Carnegie Mellon University</h1>
+                    <h3 class="centered-head">
+                        <a class="discrete-links" href="/work/student-life.html#community-advisor">Community Advisor</a>,
+                        <a class="discrete-links" href="/work/student-life.html#resident-assistant">Resident Assistant</a>, and
+                        <a class="discrete-links" href="/work/student-life.html#pre-college">Pre-College Counselor</a>
+                    </h3>
+                </div>
+                <div class="col-md-5">
+                    <img src="/images/cmu.jpg" class="img-responsive" width="100%">
                 </div>
             </div>
         </section>
