--- a/projects/ece-capstone.html
+++ b/projects/ece-capstone.html
@@ -30,10 +30,11 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
-                        <a href="../index.html" class="btn btn-primary">Home</a>
-                        <a href="../resume.html" class="btn btn-primary">Resume</a>
-                        <a href="../projects/index.html" class="btn btn-primary">Projects</a>
-                        <a href="../contact.html" class="btn btn-primary">Contact</a>
+                        <a href="/index.html" class="btn btn-primary">Home</a>
+                        <a href="/resume.html" class="btn btn-primary">Resume</a>
+                        <a href="/work/index.html" class="btn btn-primary">Experience</a>
+                        <a href="/projects/index.html" class="btn btn-primary">Projects</a>
+                        <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
             </div>
