--- a/projects/index.html
+++ b/projects/index.html
@@ -32,6 +32,7 @@
                     <div class="btn-group btn-group-justified">
                         <a href="/index.html" class="btn btn-primary">Home</a>
                         <a href="/resume.html" class="btn btn-primary">Resume</a>
+                        <a href="/work/index.html" class="btn btn-primary">Experience</a>
                         <a href="/projects/index.html" class="btn btn-primary active">Projects</a>
                         <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
