Made the flexbox do what I want

--- a/projects/index.html
+++ b/projects/index.html
@@ -54,7 +54,8 @@
                     <h3 class="centered-head">Music and Technology Capstone</h3>
                     <div class="overlay-box">
                         <a href="/projects/music-tech-capstone.html">
-                            <img src="/images/project1.jpg" class="img-thumbnail" alt="Project 1">
+                            <img src="/images/project1.jpg" class="img-thumbnail"
+                                 alt="Speaker ring used to control 3D audio through High Order Ambisonics">
                             <div class="overlay">
                                 <div class="text">
                                     <p>
@@ -62,8 +63,7 @@
                                         <br>
                                         <br>
                                         <br>
-                                        A depth-controlled system that affects position and gain of audio sources, using
-                                        <br>
+                                        A depth-controlled system that affects position and gain of audio sources, using<br>
                                         High Order Ambisonics, in a speaker ring
                                     </p>
                                 </div>
@@ -75,14 +75,15 @@
                     <h3 class="centered-head">Non-Contact EEG System</h3>
                     <div class="overlay-box">
                         <a href="/projects/non-contact-eeg.html">
-                            <img src="/images/project2.jpg" class="img-thumbnail" alt="Project 2">
+                            <img src="/images/project2.jpg" class="img-thumbnail"
+                                 alt="Prototypes of the Non-Contact Electrodes used for EEG measurements">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br>
                                     <br>
                                     <br>
                                     <br>
-                                    Non-Contact ("wireless") electrode EEG system with split channel receivers
+                                    Non-contact "wireless" electrode EEG system with split channel receivers
                                 </p></div>
                             </div>
                         </a>
@@ -92,7 +93,8 @@
                     <h3 class="centered-head">Orchestration Final Project</h3>
                     <div class="overlay-box">
                         <a href="/projects/orchestration-final-project.html">
-                            <img src="/images/project3.jpg" class="img-thumbnail" alt="Project 3">
+                            <img src="/images/project3.jpg" class="img-thumbnail"
+                                 alt="Ideal stage audience for the performance of my orchestral arrangement">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br>
@@ -112,7 +114,8 @@
                     <h3 class="centered-head">ECE Capstone</h3>
                     <div class="overlay-box">
                         <a href="/projects/ece-capstone.html">
-                            <img src="/images/project4.jpg" class="img-thumbnail" alt="Project 4">
+                            <img src="/images/project4.jpg" class="img-thumbnail"
+                                 alt="Mesh virtualization of my backpack using 3D Object Reconstruction">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br>
@@ -130,7 +133,8 @@
                     <h3 class="centered-head">Hybrid Instruments</h3>
                     <div class="overlay-box">
                         <a href="/projects/hybrid-instruments.html">
-                            <img src="/images/project5.jpg" class="img-thumbnail" alt="Project 5">
+                            <img src="/images/project5.jpg" class="img-thumbnail"
+                                 alt="Printed PCB of the mic preamp used on Mobile Instrument phone cases">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br>
@@ -148,7 +152,8 @@
                     <h3 class="centered-head">Music Generation Tool</h3>
                     <div class="overlay-box">
                         <a href="/projects/music-generation-tool.html">
-                            <img src="/images/project6.jpg" class="img-thumbnail" alt="Project 6">
+                            <img src="/images/project6.jpg" class="img-thumbnail"
+                                 alt="Screenshot of Python tool used to procedurally generate random music">
                             <div class="overlay">
                                 <div class="text"><p>
                                     <br>
