--- a/work/index.html
+++ b/work/index.html
@@ -38,13 +38,13 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-7">
+            <div class="row experience-row">
+                <!-- TODO: switch to figures -->
+                <div class="experience-text col-sm-12 col-md-6">
                     <h1 class="centered-head small-head">DSP Concepts, Inc.</h1>
                     <h3 class="centered-head">Build Automation, Quality Assurance</h3>
                 </div>
-                <!-- TODO: switch to figures -->
-                <div class="col-md-5">
+                <div class="experience-img col-sm-12 col-md-6">
                     <!-- TODO: add alt text -->
                     <!-- TODO: use width=100%, and make images much smaller! -->
                     <!-- TODO: use same style with project imgs -->
