Updated flexbox to all rows

--- a/work/index.html
+++ b/work/index.html
@@ -29,6 +29,9 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
+                    <!-- TODO: https://getbootstrap.com/docs/4.0/components/button-group/#basic-example -->
+                    <!-- TODO: Switch btn-group-justified to btn-group-vertical based on viewport (572px?)
+                         Source: https://codepen.io/richerimage/pen/jEXWWG -->
                     <div class="btn-group btn-group-justified">
                         <a href="/index.html" class="btn btn-primary">Home</a>
                         <a href="/resume.html" class="btn btn-primary">Resume</a>
@@ -39,29 +42,28 @@
                 </div>
             </div>
             <div class="row experience-row">
-                <!-- TODO: switch to figures -->
-                <div class="experience-text col-sm-12 col-md-6">
+                <div class="experience-left col-sm-12 col-md-6">
                     <h1 class="centered-head small-head">DSP Concepts, Inc.</h1>
                     <h3 class="centered-head">Build Automation, Quality Assurance</h3>
                 </div>
-                <div class="experience-img col-sm-12 col-md-6">
+                <div class="experience-right col-sm-12 col-md-6">
                     <!-- TODO: add alt text -->
                     <!-- TODO: use width=100%, and make images much smaller! -->
                     <!-- TODO: use same style with project imgs -->
                     <img src="/images/dspc.png" class="img-responsive">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-7">
+            <div class="row experience-row">
+                <div class="experience-right col-sm-12 col-md-6">
                     <h1 class="centered-head small-head">iRobot Corp.</h1>
                     <h3 class="centered-head">Simulator, Automation, and Support Engineer</h3>
                 </div>
-                <div class="col-md-5">
+                <div class="experience-left col-sm-12 col-md-6">
                     <img src="/images/irobot.jpg" class="img-responsive">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-7">
+            <div class="row experience-row">
+                <div class="experience-left col-sm-12 col-md-6">
                     <h1 class="centered-head small-head">Carnegie Mellon University</h1>
                     <h3 class="centered-head">
                         <a class="discrete-links" href="/work/student-life.html#community-advisor">Community Advisor</a>,
@@ -69,8 +71,8 @@
                         <a class="discrete-links" href="/work/student-life.html#pre-college">Pre-College Counselor</a>
                     </h3>
                 </div>
-                <div class="col-md-5">
-                    <img src="/images/cmu.jpg" class="img-responsive" width="100%">
+                <div class="experience-right col-sm-12 col-md-6">
+                    <img src="/images/cmu.jpg" class="img-responsive">
                 </div>
             </div>
         </section>
