First two images are overlayed

--- a/work/index.html
+++ b/work/index.html
@@ -44,22 +44,55 @@
             <div class="row experience-row">
                 <div class="experience-left col-sm-12 col-md-6">
                     <h1 class="centered-head small-head">DSP Concepts, Inc.</h1>
-                    <h3 class="centered-head">Build Automation, Quality Assurance</h3>
+                    <h3 class="centered-head"><i>May 2020 - Present</i></h3>
                 </div>
                 <div class="experience-right col-sm-12 col-md-6">
-                    <!-- TODO: add alt text -->
-                    <!-- TODO: use width=100%, and make images much smaller! -->
-                    <!-- TODO: use same style with project imgs -->
-                    <img src="/images/dspc.png" class="img-responsive">
+                    <div class="overlay-box">
+                        <a href="/work/dspc.html">
+                            <!-- TODO: add alt text -->
+                            <!-- TODO: make images much smaller! -->
+                            <!-- TODO: pick better images -->
+                            <img src="/images/dspc.png" class="img-thumbnail">
+                            <div class="overlay">
+                                <div class="work-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        Supporting build systems, test automation, and release regression testing of
+                                        integrated audio software platform and deployed embedded applications.
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="row experience-row">
                 <div class="experience-right col-sm-12 col-md-6">
                     <h1 class="centered-head small-head">iRobot Corp.</h1>
-                    <h3 class="centered-head">Simulator, Automation, and Support Engineer</h3>
+                    <h3 class="centered-head"><i>November 2017 - March 2020</i></h3>
                 </div>
                 <div class="experience-left col-sm-12 col-md-6">
-                    <img src="/images/irobot.jpg" class="img-responsive">
+                    <div class="overlay-box">
+                        <a href="/work/irobot.html">
+                            <img src="/images/irobot.jpg" class="img-thumbnail">
+                            <div class="overlay">
+                                <div class="work-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        Qualified software performance of autonomous cleaning robots, architected automation
+                                        framework for software testing, and maintained robot simulator platform in an AWS cloud
+                                        container.
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="row experience-row">
