--- a/projects/index.html
+++ b/projects/index.html
@@ -37,7 +37,7 @@
                         <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
-            </div>`
+            </div>
             <div class="row">
                 <figure class="col-sm-4">
                     <h1 class="centered-head small-head">Capstone Projects</h1>
