--- a/work/index.html
+++ b/work/index.html
@@ -45,6 +45,7 @@
                 <div class="experience-left col-sm-12 col-md-6">
                     <h1 class="centered-head small-head">DSP Concepts, Inc.</h1>
                     <h3 class="centered-head"><i>May 2020 - Present</i></h3>
+                    <h5 class="centered-head">Dedham, MA</h5>
                 </div>
                 <div class="experience-right col-sm-12 col-md-6">
                     <div class="overlay-box">
@@ -56,8 +57,6 @@
                             <div class="overlay">
                                 <div class="work-text">
                                     <p>
-                                        <br>
-                                        <br>
                                         <br>
                                         <br>
                                         Supporting build systems, test automation, and release regression testing of
@@ -73,6 +72,7 @@
                 <div class="experience-right col-sm-12 col-md-6">
                     <h1 class="centered-head small-head">iRobot Corp.</h1>
                     <h3 class="centered-head"><i>November 2017 - March 2020</i></h3>
+                    <h5 class="centered-head">Bedford, MA</h5>
                 </div>
                 <div class="experience-left col-sm-12 col-md-6">
                     <div class="overlay-box">
@@ -81,8 +81,6 @@
                             <div class="overlay">
                                 <div class="work-text">
                                     <p>
-                                        <br>
-                                        <br>
                                         <br>
                                         <br>
                                         Qualified software performance of autonomous cleaning robots, architected automation
@@ -98,14 +96,26 @@
             <div class="row experience-row">
                 <div class="experience-left col-sm-12 col-md-6">
                     <h1 class="centered-head small-head">Carnegie Mellon University</h1>
-                    <h3 class="centered-head">
-                        <a class="discrete-links" href="/work/student-life.html#community-advisor">Community Advisor</a>,
-                        <a class="discrete-links" href="/work/student-life.html#resident-assistant">Resident Assistant</a>, and
-                        <a class="discrete-links" href="/work/student-life.html#pre-college">Pre-College Counselor</a>
-                    </h3>
+                    <h3 class="centered-head">August 2014 - May 2017</h3>
+                    <h5 class="centered-head">Pittsburgh, PA</h5>
                 </div>
                 <div class="experience-right col-sm-12 col-md-6">
-                    <img src="/images/cmu.jpg" class="img-responsive">
+                    <div class="overlay-box">
+                        <a href="/work/student-life.html">
+                            <img src="/images/cmu.jpg" class="img-thumbnail">
+                            <div class="overlay">
+                                <div class="work-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        Managed a residential staff as a Community Advisor, led a floor of college
+                                        undergraduates as a Resident Assistant, and guided several high-school students in a
+                                        college experience as a Pre-College Counselor.
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
