PR updates Also resizing the projects' overlay text

--- a/projects/index.html
+++ b/projects/index.html
@@ -57,14 +57,12 @@
                             <img src="/images/project1.jpg" class="img-thumbnail"
                                  alt="Speaker ring used to control 3D audio through High Order Ambisonics">
                             <div class="overlay">
-                                <div class="text">
+                                <div class="proj-text">
                                     <p>
                                         <br>
                                         <br>
-                                        <br>
-                                        <br>
-                                        A depth-controlled system that affects position and gain of audio sources, using<br>
-                                        High Order Ambisonics, in a speaker ring
+                                        A depth-controlled system that affects position and gain of audio sources,
+                                        using High Order Ambisonics, in a speaker ring.
                                     </p>
                                 </div>
                             </div>
@@ -78,14 +76,15 @@
                             <img src="/images/project2.jpg" class="img-thumbnail"
                                  alt="Prototypes of the Non-Contact Electrodes used for EEG measurements">
                             <div class="overlay">
-                                <div class="text"><p>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    Non-contact "wireless" electrode EEG system with split channel receivers
-                                </p></div>
-                            </div>
+                                <div class="proj-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        Designed non-contact "wireless" electrodes with split channel receivers to
+                                        read brainwaves through an EEG system.
+                                    </p>
+                                </div>
+                                </div>
                         </a>
                     </div>
                 </figure>
@@ -96,14 +95,14 @@
                             <img src="/images/project3.jpg" class="img-thumbnail"
                                  alt="Ideal stage audience for the performance of my orchestral arrangement">
                             <div class="overlay">
-                                <div class="text"><p>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    Fully orchestrated piece for a large symphonic orchestra, synthesized and recorded using flagship sampling
-                                    software and audio editing
-                                </p></div>
+                                <div class="proj-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        Fully orchestrated piece for a large symphonic orchestra, synthesized and
+                                        recorded using flagship sampling software and audio editing.
+                                    </p>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -117,14 +116,14 @@
                             <img src="/images/project4.jpg" class="img-thumbnail"
                                  alt="Mesh virtualization of my backpack using 3D Object Reconstruction">
                             <div class="overlay">
-                                <div class="text"><p>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    3D Object Reconstruction using point cloud capture technology, Euclidean Clustering for Segmentation,
-                                    and Fast Triangulation Meshing
-                                </p></div>
+                                <div class="proj-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        3D Object Reconstruction using point cloud capture technology, Euclidean
+                                        Clustering for Segmentation, and Fast Triangulation Meshing.
+                                    </p>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -136,14 +135,14 @@
                             <img src="/images/project5.jpg" class="img-thumbnail"
                                  alt="Printed PCB of the mic preamp used on Mobile Instrument phone cases">
                             <div class="overlay">
-                                <div class="text"><p>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    Mobile recording instrument using 3D printed phone case, mic pre-amp from PCB circuitry,
-                                    and contact microphone
-                                </p></div>
+                                <div class="proj-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        Mobile recording instrument using 3D printed phone case, mic pre-amp from PCB
+                                        circuitry, and contact microphone.
+                                    </p>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -155,13 +154,14 @@
                             <img src="/images/project6.jpg" class="img-thumbnail"
                                  alt="Screenshot of Python tool used to procedurally generate random music">
                             <div class="overlay">
-                                <div class="text"><p>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    Random music generator based on user's input, while following basic counterpoint theory, implementing recursive backtracking
-                                </p></div>
+                                <div class="proj-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        Random music generator based on user's input, while following basic counterpoint
+                                        theory, implementing recursive backtracking.
+                                    </p>
+                                </div>
                             </div>
                         </a>
                     </div>
