Creating Work Experience landing page (#48)
* Starting attempt, this takes awhile...

* Made the flexbox do what I want

* Updated flexbox to all rows

* First two images are overlayed

* Looks pretty good now!

* PR updates
Also resizing the projects' overlay text

* Cleaned up extra TODOs

* alt text provided

* Forgot to check in comment deletes

--- a/projects/index.html
+++ b/projects/index.html
@@ -32,11 +32,12 @@
                     <div class="btn-group btn-group-justified">
                         <a href="/index.html" class="btn btn-primary">Home</a>
                         <a href="/resume.html" class="btn btn-primary">Resume</a>
+                        <a href="/work/index.html" class="btn btn-primary">Experience</a>
                         <a href="/projects/index.html" class="btn btn-primary active">Projects</a>
                         <a href="/contact.html" class="btn btn-primary">Contact</a>
                     </div>
                 </div>
-            </div>`
+            </div>
             <div class="row">
                 <figure class="col-sm-4">
                     <h1 class="centered-head small-head">Capstone Projects</h1>
@@ -53,17 +54,15 @@
                     <h3 class="centered-head">Music and Technology Capstone</h3>
                     <div class="overlay-box">
                         <a href="/projects/music-tech-capstone.html">
-                            <img src="/images/project1.jpg" class="img-thumbnail" alt="Project 1">
+                            <img src="/images/project1.jpg" class="img-thumbnail"
+                                 alt="Speaker ring used to control 3D audio through High Order Ambisonics">
                             <div class="overlay">
-                                <div class="text">
+                                <div class="proj-text">
                                     <p>
                                         <br>
                                         <br>
-                                        <br>
-                                        <br>
-                                        A depth-controlled system that affects position and gain of audio sources, using
-                                        <br>
-                                        High Order Ambisonics, in a speaker ring
+                                        A depth-controlled system that affects position and gain of audio sources,
+                                        using High Order Ambisonics, in a speaker ring.
                                     </p>
                                 </div>
                             </div>
@@ -74,16 +73,18 @@
                     <h3 class="centered-head">Non-Contact EEG System</h3>
                     <div class="overlay-box">
                         <a href="/projects/non-contact-eeg.html">
-                            <img src="/images/project2.jpg" class="img-thumbnail" alt="Project 2">
+                            <img src="/images/project2.jpg" class="img-thumbnail"
+                                 alt="Prototypes of the Non-Contact Electrodes used for EEG measurements">
                             <div class="overlay">
-                                <div class="text"><p>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    Non-Contact ("wireless") electrode EEG system with split channel receivers
-                                </p></div>
-                            </div>
+                                <div class="proj-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        Designed non-contact "wireless" electrodes with split channel receivers to
+                                        read brainwaves through an EEG system.
+                                    </p>
+                                </div>
+                                </div>
                         </a>
                     </div>
                 </figure>
@@ -91,16 +92,17 @@
                     <h3 class="centered-head">Orchestration Final Project</h3>
                     <div class="overlay-box">
                         <a href="/projects/orchestration-final-project.html">
-                            <img src="/images/project3.jpg" class="img-thumbnail" alt="Project 3">
+                            <img src="/images/project3.jpg" class="img-thumbnail"
+                                 alt="Ideal stage audience for the performance of my orchestral arrangement">
                             <div class="overlay">
-                                <div class="text"><p>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    Fully orchestrated piece for a large symphonic orchestra, synthesized and recorded using flagship sampling
-                                    software and audio editing
-                                </p></div>
+                                <div class="proj-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        Fully orchestrated piece for a large symphonic orchestra, synthesized and
+                                        recorded using flagship sampling software and audio editing.
+                                    </p>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -111,16 +113,17 @@
                     <h3 class="centered-head">ECE Capstone</h3>
                     <div class="overlay-box">
                         <a href="/projects/ece-capstone.html">
-                            <img src="/images/project4.jpg" class="img-thumbnail" alt="Project 4">
+                            <img src="/images/project4.jpg" class="img-thumbnail"
+                                 alt="Mesh virtualization of my backpack using 3D Object Reconstruction">
                             <div class="overlay">
-                                <div class="text"><p>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    3D Object Reconstruction using point cloud capture technology, Euclidean Clustering for Segmentation,
-                                    and Fast Triangulation Meshing
-                                </p></div>
+                                <div class="proj-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        3D Object Reconstruction using point cloud capture technology, Euclidean
+                                        Clustering for Segmentation, and Fast Triangulation Meshing.
+                                    </p>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -129,16 +132,17 @@
                     <h3 class="centered-head">Hybrid Instruments</h3>
                     <div class="overlay-box">
                         <a href="/projects/hybrid-instruments.html">
-                            <img src="/images/project5.jpg" class="img-thumbnail" alt="Project 5">
+                            <img src="/images/project5.jpg" class="img-thumbnail"
+                                 alt="Printed PCB of the mic preamp used on Mobile Instrument phone cases">
                             <div class="overlay">
-                                <div class="text"><p>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    Mobile recording instrument using 3D printed phone case, mic pre-amp from PCB circuitry,
-                                    and contact microphone
-                                </p></div>
+                                <div class="proj-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        Mobile recording instrument using 3D printed phone case, mic pre-amp from PCB
+                                        circuitry, and contact microphone.
+                                    </p>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -147,15 +151,17 @@
                     <h3 class="centered-head">Music Generation Tool</h3>
                     <div class="overlay-box">
                         <a href="/projects/music-generation-tool.html">
-                            <img src="/images/project6.jpg" class="img-thumbnail" alt="Project 6">
+                            <img src="/images/project6.jpg" class="img-thumbnail"
+                                 alt="Screenshot of Python tool used to procedurally generate random music">
                             <div class="overlay">
-                                <div class="text"><p>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    Random music generator based on user's input, while following basic counterpoint theory, implementing recursive backtracking
-                                </p></div>
+                                <div class="proj-text">
+                                    <p>
+                                        <br>
+                                        <br>
+                                        Random music generator based on user's input, while following basic counterpoint
+                                        theory, implementing recursive backtracking.
+                                    </p>
+                                </div>
                             </div>
                         </a>
                     </div>
