Updated photos, resized for 585x300 sizing

--- a/work/index.html
+++ b/work/index.html
@@ -47,7 +47,7 @@
                 <div class="experience-right col-sm-12 col-md-6">
                     <div class="overlay-box">
                         <a href="/work/dspc.html">
-                            <img src="/images/dspc.png" class="img-thumbnail"
+                            <img src="/images/dspc2a.png" class="img-thumbnail"
                                  alt="Screenshot of AudioWeaver Designer, the main PC application developed by DSP Concepts.">
                             <div class="overlay">
                                 <div class="work-text">
@@ -72,7 +72,7 @@
                 <div class="experience-left col-sm-12 col-md-6">
                     <div class="overlay-box">
                         <a href="/work/irobot.html">
-                            <img src="/images/irobot.jpg" class="img-thumbnail"
+                            <img src="/images/irobot1a.jpg" class="img-thumbnail"
                                  alt="Picture of the Braava Jet m6, the autonomous mopping robot I qualified and helped release to the market.">
                             <div class="overlay">
                                 <div class="work-text">
@@ -98,7 +98,7 @@
                 <div class="experience-right col-sm-12 col-md-6">
                     <div class="overlay-box">
                         <a href="/work/student-life.html">
-                            <img src="/images/webster.jpg" class="img-thumbnail"
+                            <img src="/images/cmu3a.jpg" class="img-thumbnail"
                                  alt="Picture of Webster Apartments, the residence hall at Carnegie Mellon University that I led as a Community Advisor.">
                             <div class="overlay">
                                 <div class="work-text">
